# RealTimeChart

./: .clang-format  .gitignore  CMakeLists.txt  CsvLoaderWindow.cc  README.md  RealTimeChart  RealTimeChart.pro  dziostream.h  environment_set.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  realtimechart_plugin_import.cpp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AlignedBox.h.757CD3455452E30E.idx  AngleAxis.h.61CC388C225A763C.idx  Array.h.115BB126F969E2F7.idx  ArrayBase.h.B89241DB6244D1D9.idx  ArrayCwiseBinaryOps.h.28071FCD10554050.idx  ArrayCwiseUnaryOps.h.9FBEB8E51816785D.idx  ArrayWrapper.h.D0EEF75A0F89B588.idx  Assign.h.118C9E51F582267D.idx  AssignEvaluator.h.4437C36C5C039A15.idx  AssignmentFunctors.h.B5B3B81A2A91D11E.idx  BDCSVD.h.DA1FB11F1A87E1B2.idx  BandMatrix.h.13D4963A934EB96E.idx  BinaryFunctors.h.879DF6416108402F.idx  BlasUtil.h.4F1D02738435894A.idx  Block.h.21135463F3F555D1.idx  BlockHouseholder.h.8D9D2FCB67AE55B1.idx  BlockMethods.h.997DD294E3B7DF44.idx  BooleanRedux.h.1A9140B590CCD893.idx  Cholesky.22077EDA10B58984.idx  ColPivHouseholderQR.h.86B0B588CAF11BE4.idx  CommaInitializer.h.AE3BEEB203C54952.idx  CommonCwiseBinaryOps.h.4631CE8619D6E9DA.idx  CommonCwiseUnaryOps.h.74828CCB130BFDF1.idx  CompleteOrthogonalDecomposition.h.E590E3431F2F2BCB.idx  Complex.h.0794B7FED4F903AE.idx  Complex.h.ADAF1D91388FE8FD.idx  ComplexEigenSolver.h.C70B1F2F5D19A434.idx  ComplexSchur.h.54AA56812E8EBF08.idx  ConditionEstimator.h.2D804BAB4A7F1221.idx  ConjHelper.h.93F544C6EF0C78E5.idx  Constants.h.162533B3B4D42196.idx  Core.B440D31FFC3A0B3C.idx  CoreEvaluators.h.5C4B85FE6C2E054F.idx  CoreIterators.h.492EB0C163CA7A3A.idx  CsvLoaderWindow.cc.5D190F8B7A5CA7CA.idx  CwiseBinaryOp.h.5E4A47EE449A4641.idx  CwiseNullaryOp.h.22CABCC5CAED793C.idx  CwiseTernaryOp.h.57ECF2AF92CFDED7.idx  CwiseUnaryOp.h.59F8DC8E5F767EC1.idx  CwiseUnaryView.h.C8140A53C8B2E8CD.idx  (+1983 more)
host_API/: CMakeLists.txt  dz_sm_socket.h  dz_sm_socket_top.cc  dzcommunicator_top.h  dzsem.cc  main1.cc
output/: RealTimeChart
output/send_src/: dz_sm_socket.cc  dz_sm_socket.h  dz_sm_socket_top.cc  dz_sm_socket_top.h  dz_sm_socket_top_queue.hpp  dzcommunicator_top.h
output/send_src/demo/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  main1.cc  rules.ninja
socket_share_mem/: IOopperator.cc  IOopperator.h  dz_sm_socket.cc  dz_sm_socket_top.cc  dz_sm_socket_top.h  dzsem.hpp
